fixed overflow issues in boxes design (Dashboard etc.)

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.less
@@ -196,10 +196,14 @@ body {
             }
         }
 
-        .bottom span {
-            font-size: 12px;
-            display: block;
-            margin-top: 5px;
+        .bottom {
+            width: 100%;
+
+            span {
+                font-size: 12px;
+                display: block;
+                margin-top: 5px;
+            }
         }
     }
 
@@ -214,6 +218,7 @@ body {
         font-size: 12px;
 
         .members-count, .items-count {
+            max-width: 50%;
             color: @textColorBlack;
         }
     }
